# bondora_api

./: README.md  mtest.py  pyproject.toml  setup.py
bondora_api/: __init__.py  api_client.py  configuration.py  rest.py
docs/: AccountApi.md  ApiBidSummariesRequest.md  ApiResultLoanPartDetailsList.md  ApiResultSecondMarketItemSummaryList.md  AuctionApi.md  AuctionRequest.md  BidApi.md  DebtManagementEvent.md  EventLogRequest.md  GoGrowAccount.md  LoanPartDetails.md  LoanPartDetailsRequest.md  LoanTransfer.md  MyAccountBalance.md  MyInvestmentItem.md  MyInvestmentsRequest.md  PublicDatasetItem.md  PublicDatasetRequest.md  ReportApi.md  ScheduledPayment.md  SecondMarketApi.md  SecondMarketItem.md  SecondMarketListingRequest.md  SecondMarketRequest.md  SecondMarketSaleRequest.md
swagger_client/: __init__.py  api_client.py  configuration.py
test/: test_account_api.py  test_api_bid_summaries_request.py  test_api_error.py  test_api_result.py  test_api_result_auctions.py  test_api_result_bid.py  test_api_result_bids.py  test_api_result_create_report.py  test_api_result_event_log.py  test_api_result_extended_auction.py  test_api_result_loan_part_details.py  test_api_result_loan_part_details_list.py  test_api_result_make_bids.py  test_api_result_my_account_balance.py  test_api_result_my_investments.py  test_api_result_public_dataset.py  test_api_result_report.py  test_api_result_report_list.py  test_api_result_second_market.py  test_api_result_second_market_item_summary.py  test_api_result_second_market_item_summary_list.py  test_api_result_second_market_sale.py  test_bid.py  (+40 more)
(+72 files in other folders)
