[tool.poetry]
name = "bondora_api"
version = "0.1.0"
description = ""
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]
repository = 'https://github.com/bjrnfrdnnd/bondora_api'

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
