[tool.poetry]
name = "bondora_api"
version = "0.1.3"
description = ""
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]
repository = 'https://github.com/bjrnfrdnnd/bondora_api'

[tool.poetry.dependencies]
python = "^3.10"
six = ">=1.16.0"
urllib3 = ">=1.26.9"
pandas = "^2"
certifi = ">=2022.5.18"
mimeparse = ">=0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
